laurie-platt published a site update

--- a/data-quality-assessment-and-audit.html
+++ b/data-quality-assessment-and-audit.html
@@ -190,6 +190,7 @@
 <h1><span class="header-section-number">Chapter 4</span> Data Quality Assessment and Audit</h1>
 <div id="purpose" class="section level2">
 <h2><span class="header-section-number">4.1</span> Purpose</h2>
+<p>The purpose of a data quality assessment …</p>
 </div>
 <div id="guidelines" class="section level2">
 <h2><span class="header-section-number">4.2</span> Guidelines</h2>
